# opengl_cursor_follower

./: .gitignore  CMakeLists.txt  Renderer.cpp  Renderer.h  WindowRenderer.cpp  WindowRenderer.h  WindowRendererManager.cpp  WindowRendererManager.h  build.sh  clean.sh  config.h.in  internal.h  main.cpp  opengl.h  x11_WindowRenderer.cpp  x11_WindowRenderer.h
glad/: glad.c
include/: argparser.hpp
include/glad/: glad.h
